# quartz-uefi-bootloader

./: .envrc  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
scripts/: builder.sh
src/: main.rs
