[package]
name = "quartz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
raw-cpuid = "11.0.1"
spin = "0.9.8"
uefi = { version = "0.24.0", features = ["alloc"] }
uefi-services = "0.21.0"
